v1.0.1 - Fix a ton of things, add economy setting